sumo/tests/sumo/output/vtypeprobe/errors/file_false/errors.sumo
Error: Could not build output file 'xxx/vTypeProbe.xml'.
Quitting (on error).
